spacing fixed

--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -122,8 +122,8 @@ label {
     text-transform: uppercase;
     position: relative;
     border-left: 1px solid #999181;
-    height: 48px;
-    margin-top: -5px;
+    height: 46px;
+    margin-top: -3px;
 }
 
 .phone {
@@ -134,6 +134,7 @@ label {
 
 .phone-number {
     font-size: 18px;
+    line-height: 13px;
 }
 
 .primary-heading {
